Minor fix to vite.config and minor tweaks to Login on mobile

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -123,8 +123,14 @@ a:hover::before {
 /* Mobile phones and down */
 @media screen and (max-width: 425px) {
    .loginContainer {
-        max-width: 80vw;
+        max-width: 100vw;
         margin: 5vh auto;
+        justify-content: unset;
+        height: unset;
+    }
+
+    .loginForm {
+        width: 84%;
     }
 }
 
